--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Chilli App</title>
+    <title>Chilli App version 2</title>
   </head>
   <body bgcolor="#E6E6FA">
     <noscript>
